samples/_failures_safe/1761194138_ba48dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b742ed4e.c: In function ‘main’:
./samples/SAFE/__tmp_b742ed4e.c:166:9: error: expected declaration or statement at end of input
  166 |         if (token.type == TOKEN_EOF) {
      |         ^~
./samples/SAFE/__tmp_b742ed4e.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b742ed4e.c:166:9: error: expected declaration or statement at end of input
